@@ -183,6 +183,39 @@ module Netzke
         js_include(ex.join("#{File.dirname(__FILE__)}/grid_panel/javascripts/rows-dd.js"))
       end
 
+      # class << self
+      #   attr_accessor :columns, :grid_panel_default_config
+      # end
+      #
+      # self.grid_panel_default_config = {}
+
+      def self.inherited(base)
+        super
+
+        base.class_eval do
+          class << self
+            def model(class_name)
+              grid_panel_default_config = self.read_inheritable_attribute(:grid_panel_default_config) || {}
+              grid_panel_default_config.merge!(:model => class_name)
+              self.write_inheritable_attribute(:grid_panel_default_config, grid_panel_default_config)
+            end
+
+            def column(name, config = {})
+              columns = self.read_inheritable_attribute(:columns) || []
+              columns << config.merge(:name => name.to_s)
+              self.write_inheritable_attribute(:columns, columns)
+            end
+          end
+        end
+      end
+
+      def default_config
+        super.tap do |c|
+          c.merge!(self.class.read_inheritable_attribute(:grid_panel_default_config) || {})
+          c[:columns] = self.class.read_inheritable_attribute(:columns)
+        end
+      end
+
       def js_config #:nodoc:
         super.merge({
           :bbar => config.has_key?(:bbar) ? config[:bbar] : default_bbar,
