@@ -1,12 +1,14 @@
 class BookGrid < Netzke::Basepack::GridPanel
   js_property :title, I18n.t('books', :default => "Books")
 
-  def default_config
-    super.merge(
-      :model => "Book",
-      # :prohibit_update => true
-      # :columns => [{:name => :author__first_name, :read_only => true}, :exemplars, {:name => :digitized, :xtype => :checkcolumn, :editable => false}]
-      # :columns => [{:name => :title, :editable => false, :editor => {:xtype => :datefield}}, :exemplars, :digitized, :notes]
-    )
-  end
+  model "Book"
+
+  # column :title
+  # column :author__first_name
+
+  # def default_config
+  #   super.merge(
+  #     :prohibit_update => true
+  #   )
+  # end
 end
