@@ -1,5 +1,4 @@
 class BookGridWithPersistence < BookGrid
-
   def default_config
     super.merge :persistence => true
   end
